--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -468,12 +468,16 @@
       "supertypeHierarchy": "Supertype Hierarchy"
     },
     "vsx-registry": {
+      "confirmDialogMessage": "The extension \"{0}\" is unverified and might pose a security risk.",
+      "confirmDialogTitle": "Are you sure you want to proceed with the installation ?",
       "downloadCount": "Download count: {0}",
       "errorFetching": "Error fetching extensions.",
       "errorFetchingConfigurationHint": "This could be caused by network configuration issues.",
       "failedInstallingVSIX": "Failed to install {0} from VSIX.",
       "invalidVSIX": "The selected file is not a valid \"*.vsix\" plugin.",
       "license": "License: {0}",
+      "onlyShowVerifiedExtensionsDescription": "This allows the {0} to only show verified extensions.",
+      "onlyShowVerifiedExtensionsTitle": "Only Show Verified Extensions",
       "recommendedExtensions": "Do you want to install the recommended extensions for this repository?",
       "searchPlaceholder": "Search Extensions in {0}",
       "showInstalled": "Show Installed Extensions",
