Translation update for version 1.46.101

--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -394,6 +394,9 @@
       "config.untrackedChanges.hidden": "hidden",
       "config.untrackedChanges.mixed": "mixed",
       "config.untrackedChanges.separate": "separate",
+      "dirtyDiff": {
+        "close": "Close Change Peek View"
+      },
       "history": "History",
       "noRepositoryFound": "No repository found",
       "unamend": "Unamend",
